@@ -1,3 +1,7 @@
+2004-07-14  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclXselect.c: undef panic on __APPLE__ (steffen)
+
 2004-06-04  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclExtdInt.h: Changed when 'tclInt.h' is included. Have
